import { CustomBoard } from '../aggregates/custom-board.aggregate';
import { CustomBoardId } from '../value-objects/custom-board-id.vo';

export const CUSTOM_BOARD_REPOSITORY = 'CUSTOM_BOARD_REPOSITORY';

export interface ICustomBoardRepository {
  save(board: CustomBoard): Promise<void>;

  /** Newest first, capped at [limit]. */
  findAll(limit: number): Promise<CustomBoard[]>;

  findById(id: CustomBoardId): Promise<CustomBoard | null>;

  delete(id: CustomBoardId): Promise<void>;
}
